# genf

./: .gitignore  README.md  pyproject.toml
contest/: main.py  pyproject.toml  requirements.txt  utilities.py
contest/src/contest/: __init__.py
contest_H26/: main.py  utilities.py
dashboard/: README.md  main.py  pyproject.toml  requirements.txt  utilities.py
dashboard/components/: __init__.py  database_module.py  models.py  other_components.py  reviews.py  sidebar.py
dashboard/dashboard/: __init__.py  utilities.py
dashboard/pages/: buk_cash.py  camp_status.py  members.py  review.py  scores.py  seasonal_review.py  seasonal_review_.py  timer.py  work_types.py  yearly_review.py
dashboard/src/components/: __init__.py  database_module.py  other_components.py  reviews.py  sidebar.py
dashboard/src/dashboard/: __init__.py  utilities.py
dashboard/src/dashboard/components/: __init__.py  database_module.py  other_components.py  reviews.py  sidebar.py
dashboard/src/models.py/: __init__.py  models.py
dashboard/tests/: test_combined.py  test_database.py  test_supabase.py
dashboard/tests/fixtures/: data_buk_cash.py  data_genf.py
form/: main.py  requirements.txt
form/src/form/: __init__.py
playground/: Nyttårsfest_stats.ipynb  api_complete_documentation.py  buck_cash.ipynb  genf_supabase.ipynb  genf_workbench.ipynb  match_users.ipynb  match_users_v2.ipynb  members.ipynb  migrate_old_data.ipynb  test_api_all_functions.py  test_api_job_logs.py
playground/src/: GENF.py
src/: genf_telegrambot.py
survey/: main_survey.py  pyproject.toml
survey_presentation/: main.py  pyproject.toml  requirements.txt
survey_presentation/.streamlit/: config.toml
