[project]
name = "contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sigvardbratlie", email = "sigvard.bratlie@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.5.0",
    "google-auth>=2.47.0",
    "google-cloud-bigquery>=3.40.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "streamlit>=1.52.2",
    "streamlit-extras>=0.7.8",
    "supabase>=2.27.1",
]

[project.scripts]
contest = "contest:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
