[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sigvardbratlie", email = "sigvard.bratlie@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.6",
    "google-auth>=2.47.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "supabase>=2.27.1",
    "tqdm>=4.67.1",
]

[project.scripts]
dashboard = "dashboard:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
