[project]
name = "survey-presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.5.0",
    "google-auth>=2.47.0",
    "google-cloud-bigquery>=3.40.0",
    "plotly>=6.5.1",
    "streamlit>=1.52.2",
]
